--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "promises-aplus-tests Promise.js"
+    "test": "promises-aplus-tests Promise.js",
+    "test:12": "promises-aplus-tests MyPromise.js"
   },
   "keywords": [],
   "author": "",
